--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "fslightbox": "^3.4.1",
+    "gsap": "^3.11.5",
     "swiper": "^9.1.0"
   }
 }
