--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.14",
     "aos": "^3.0.0-beta.6",
-    "fslightbox": "^3.4.1",
     "gsap": "^3.11.5",
     "swiper": "^9.1.0"
   }
