--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fancyapps/ui": "^5.0.14",
     "aos": "^3.0.0-beta.6",
     "gsap": "^3.11.5",
+    "spark-particles": "^1.2.2",
     "swiper": "^9.1.0"
   }
 }
